2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Makefile.am (snapshot): Rely on the graphicsmagick_snapshot_copy
        script to reduce files we don't care to distribute so that all
        targets are still produced.

        * coders/jp2.c (alloc_rlm): JasPer expects its allocator to return
        non-null for zero size

2021-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Makefile.am (snapshot): Update the snapshot target to distribute
        a minimal set of files.

        * magick/symbols.h: Update the list of Gm prefixed symbols.

        * NEWS.txt: Updated with changes until today.

2021-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/index.rst: Development snapshots are now at SourceForge.

        * www/download.rst, www/index.rst, README.txt: Remove references
        to ftp.graphicsmagick.org, which was shut down due to continuing
        abusive practices and lack of support from the user community.

2021-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/memory-private.h
        (MagickAllocateResourceLimitedMemoryAttribute): Remove extraneous
        comma.

        * coders/wpg.c (LoadWPG2Flags): Fix comment type and whitespace
        issues.

2021-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/caption.c (ReadCAPTIONImage): Set draw_info to NULL upon
        deallocation.  Fixes an assertion reported by Michael Melcher via
        the graphicsmagick-bugs list on November 11, 2021.

2021-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (initialize_jasper): For JasPer 3.0.0 and later,
        use resource-limited memory allocators. JasPer 3.0.0 is not yet
        released at this time.

2021-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/gif.c (ReadGIFImage): Handle GIF files where the 'opaque'
        index matches the number of colors by producing an extra colormap