@@ -1,5 +1,16 @@
 2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+        * scripts/graphicsmagick_snapshot_copy-ssh: Sample
+        graphicsmagick_snapshot_copy script which uses scp to copy
+        snapshot files to a directory at a remote host, and then rsync
+        over ssh from there to SourceForge.  Copy to a local script
+        directory and edit to suit local requirements.
+
+        * scripts/graphicsmagick_snapshot_copy-local: Sample
+        graphicsmagick_snapshot_copy script to copy snapshot files to a
+        local directory and then rsync over ssh to SourceForge.  Copy to a
+        local script directory and edit to suit local requirements.
+
         * Makefile.am (snapshot): Rely on the graphicsmagick_snapshot_copy
         script to reduce files we don't care to distribute so that all
         targets are still produced.
